# GLPainter

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE
apps/: CMakeLists.txt
apps/TextViewDemoApp/: CMakeLists.txt  main.cpp  main.qml
lib/: CMakeLists.txt
lib/TextView/: CMakeLists.txt  DFCache.cpp  DFCache.h  DFGlyph.cpp  DFGlyph.h  FontLoader.cpp  FontLoader.h  TextAttributes.cpp  TextAttributes.h  TextFrameBuffer.cpp  TextFrameBuffer.h  TextFramebuffer.cpp  TextFramebuffer.h  TextView.cpp  TextView.h  TextViewRenderer.cpp  TextViewRenderer.h  plugin.cpp
lib/TextView/lib/: FontLoader.cpp  FontLoader.h  TextAttributes.cpp  TextAttributes.h  TextFramebuffer.cpp  TextFramebuffer.h  TextRenderer.cpp  TextRenderer.h
lib/TextView/plugin/: DFGlyph.cpp  DFGlyph.h  FontLoaderObject.cpp  FontLoaderObject.h  QmlTextAttributes.cpp  QmlTextAttributes.h  QuickTextViewRenderer.cpp  QuickTextViewRenderer.h  TextAttributesSingleton.h  TextFramebufferObject.cpp  TextFramebufferObject.h  TextView.cpp  TextView.h  plugin.cpp  plugin.h
lib/TextView/shaders/: textview.vert
lib/TextViewCore/: CMakeLists.txt  DFCache.cpp  DFCache.h  FontLoader.cpp  FontLoader.h  TextFramebuffer.h  TextRenderer.cpp  TextRenderer.h
lib/TextViewCore/shaders/: textview.frag
lib/TextViewQml/: CMakeLists.txt  FontLoaderObject.cpp  FontLoaderObject.h  QuickTextViewRenderer.cpp  TextFramebufferObject.cpp  TextView.cpp  TextView.h  plugin.cpp
test/: CMakeLists.txt  sample_test.cpp  text_buffer_test.cpp
