cmake_minimum_required(VERSION 3.16)

project(GLPainter VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

find_package(Qt6 REQUIRED COMPONENTS Core)

enable_testing()

add_subdirectory(lib)
add_subdirectory(apps)
add_subdirectory(test)

